# dioxus_asset_bug

./: .gitignore  Cargo.toml
crates/myrust/: Cargo.toml
crates/ui/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
crates/ui/assets/: tailwind.css
crates/ui/examples/: tabs.rs
crates/ui/src/: datepicker.rs  drawer.rs  lib.rs  tabs.rs
