[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus-lib = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "9816b40" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "9816b40" }
manganis = { version = "0.3.0-alpha.1" }

[dev-dependencies]
dioxus = { workspace = true, features = ["web"] }
